hphp/hack/test/typecheck/trait_require_extends2.php.exp
File "trait_require_extends2.php", line 20, characters 22-24:
You cannot override this method (Typing[4070])
File "trait_require_extends2.php", line 6, characters 28-30:
It was declared as final
